# src/route/PaymentRoutes.ts
@@ -1,4 +1,5 @@
 import { PaymentController } from '../controller/PaymentController';
+import { auth } from '../middleware/AuthMiddleware';
 import BaseRoutes from './Base/BaseRouter';
 class PaymentRoutes extends BaseRoutes {
 	constructor() {
@@ -8,7 +9,7 @@ class PaymentRoutes extends BaseRoutes {
 		this.router.post('/paypal', this.controller.createPaypalOrder);
 		this.router.post('/paypal/success', this.controller.completePaypalOrder);
 		this.router.post('/paypal/capture', this.controller.capturePaypalOrder);
-		this.router.post('/vn-pay', this.controller.getVNPayPaymentURL);
+		this.router.post('/vn-pay',auth, this.controller.getVNPayPaymentURL);
 		this.router.post('/momo', this.controller.getMomoPaymentURL);
 		this.router.get('/vn-pay/verify', this.controller.verifyReturnUrlVNPay);
 		this.router.get('/momo/verify', this.controller.verifyReturnUrlMomo);
